--- a/IBM_temp.ipynb
+++ b/IBM_temp.ipynb
@@ -15,11 +15,11 @@
       "  Using cached imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
       "Collecting imbalanced-learn\n",
       "  Using cached imbalanced_learn-0.9.1-py3-none-any.whl (199 kB)\n",
-      "Requirement already satisfied: scikit-learn>=1.1.0 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
       "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.21.6)\n",
+      "Requirement already satisfied: scikit-learn>=1.1.0 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (3.1.0)\n",
-      "Requirement already satisfied: joblib>=1.0.0 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.0.1)\n",
       "Requirement already satisfied: scipy>=1.3.2 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.7.3)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /opt/conda/lib/python3.9/site-packages (from imbalanced-learn->imblearn) (1.0.1)\n",
       "Installing collected packages: imbalanced-learn, imblearn\n",
       "Successfully installed imbalanced-learn-0.9.1 imblearn-0.0\n"
      ]
@@ -4969,7 +4969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "023c2ecf-08a7-430f-b809-5ec745aae669",
    "metadata": {},
    "outputs": [],
@@ -4991,7 +4991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "49cb0378-20bf-40c7-860f-a8bff893954e",
    "metadata": {},
    "outputs": [],
@@ -5021,7 +5021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "24f76a45-5cd8-46a0-8380-a379c56e8f99",
    "metadata": {},
    "outputs": [],
@@ -5033,7 +5033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "73d7a3a4-3467-49fa-896f-5f1721a4cd9f",
    "metadata": {},
    "outputs": [
@@ -5043,7 +5043,7 @@
        "array([0.17373956, 0.1478949 ])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5054,7 +5054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "8c79138f-d61c-47d3-b07d-135ff4e1378f",
    "metadata": {},
    "outputs": [
@@ -5064,7 +5064,7 @@
        "\"How important are the following issues to you? [Women's Rights]_Important\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5077,7 +5077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "c0429641-2e68-483b-aa2e-a1d3af59a9a0",
    "metadata": {},
    "outputs": [
@@ -5087,7 +5087,7 @@
        "'What is your party self-identification?_Democrat'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5106,12 +5106,12 @@
     "## Model 1: Logistic Regression\n",
     "We apply logistic regression as our goal is to predict a binary categorical value from as a linear function of features.\n",
     "\n",
-    "Result: test scores for Proposition 1 is negative, implying that linear regression behave poorly in predicting the outcome. Proposition 2 works well as it has a perfect score in regression, but proposition 3 work poorly."
+    "Result: Perfect performance on proposition 30, extremely poor at 31."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "b421295c-0cdb-4152-9871-ed28162d5513",
    "metadata": {},
    "outputs": [
@@ -5119,7 +5119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train score for Prop-1:0.9473684210526315, test score for Prop-1:-0.24999999999999956\n"
+      "train score for Prop-1:0.9473684210526315, test score for Prop-1:0.8\n"
      ]
     }
    ],
@@ -5132,14 +5132,14 @@
     "# Use the model to make predictions\n",
     "reg_y_pred1 = reg_1_classifier.predict(X_test1)\n",
     "# Check Prediction result\n",
-    "reg_test1_score = r2_score(reg_y_pred1,y_test1)\n",
+    "reg_test1_score = accuracy_score(reg_y_pred1,y_test1)\n",
     "\n",
     "print(\"train score for Prop-1:\"+ str(reg_train1_score)+\", test score for Prop-1:\" + str(reg_test1_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "13f5f86f-a478-4846-817f-7b3b5a4bdf17",
    "metadata": {},
    "outputs": [
@@ -5156,13 +5156,13 @@
     "reg_30_classifier = LogisticRegression(random_state=42).fit(X_train30,y_train30)\n",
     "reg_train30_score = reg_30_classifier.score(X_train30,y_train30)\n",
     "y_pred30 = reg_30_classifier.predict(X_test30)\n",
-    "reg_test30_score = r2_score(y_pred30,y_test30)\n",
+    "reg_test30_score = accuracy_score(y_pred30,y_test30)\n",
     "print(\"train score for Prop-30:\"+ str(reg_train30_score)+\", test score for Prop-30:\" + str(reg_test30_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "c228e1de-3085-4743-bb0c-bb4d3ba1a634",
    "metadata": {},
    "outputs": [
@@ -5170,7 +5170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train score for Prop-31:1.0, test score for Prop-31:0.0\n"
+      "train score for Prop-31:1.0, test score for Prop-31:0.4\n"
      ]
     }
    ],
@@ -5179,7 +5179,7 @@
     "reg_31_classifier = LogisticRegression(random_state=42).fit(X_train31,y_train31)\n",
     "reg_train31_score = reg_31_classifier.score(X_train31,y_train31)\n",
     "y_pred31 = reg_31_classifier.predict(X_test31)\n",
-    "reg_test31_score = r2_score(y_pred31,y_test31)\n",
+    "reg_test31_score = accuracy_score(y_pred31,y_test31)\n",
     "print(\"train score for Prop-31:\"+ str(reg_train31_score)+\", test score for Prop-31:\" + str(reg_test31_score))"
    ]
   },
